Overflow issue fix attempt #2

--- a/slides.css
+++ b/slides.css
@@ -3,7 +3,7 @@
     left: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .slideshow .slide{
